--- a/files/dnsmasq_list.conf
+++ b/files/dnsmasq_list.conf
@@ -1361,8 +1361,8 @@ server=/.ctao.org/127.0.0.1#5353
 ipset=/.ctao.org/gfwlist
 server=/.ctfriend.net/127.0.0.1#5353
 ipset=/.ctfriend.net/gfwlist
-server=/.cthlo.github.io/127.0.0.1#5353
-ipset=/.cthlo.github.io/gfwlist
+#server=/.cthlo.github.io/127.0.0.1#5353
+#ipset=/.cthlo.github.io/gfwlist
 server=/.ctitv.com.tw/127.0.0.1#5353
 ipset=/.ctitv.com.tw/gfwlist
 server=/.cts.com.tw/127.0.0.1#5353
@@ -2385,10 +2385,10 @@ server=/.gimpshop.com/127.0.0.1#5353
 ipset=/.gimpshop.com/gfwlist
 server=/.girlbanker.com/127.0.0.1#5353
 ipset=/.girlbanker.com/gfwlist
-server=/.gist.github.com/127.0.0.1#5353
-ipset=/.gist.github.com/gfwlist
-server=/.github.com/127.0.0.1#5353
-ipset=/.github.com/gfwlist
+#server=/.gist.github.com/127.0.0.1#5353
+#ipset=/.gist.github.com/gfwlist
+#server=/.github.com/127.0.0.1#5353
+#ipset=/.github.com/gfwlist
 server=/.git-scm.com/127.0.0.1#5353
 ipset=/.git-scm.com/gfwlist
 server=/.gizlen.net/127.0.0.1#5353
@@ -4095,8 +4095,8 @@ server=/.nhentai.net/127.0.0.1#5353
 ipset=/.nhentai.net/gfwlist
 server=/.nic.cz.cc/127.0.0.1#5353
 ipset=/.nic.cz.cc/gfwlist
-server=/.nic.google/127.0.0.1#5353
-ipset=/.nic.google/gfwlist
+#server=/.nic.google/127.0.0.1#5353
+#ipset=/.nic.google/gfwlist
 server=/.nicovideo.jp/127.0.0.1#5353
 ipset=/.nicovideo.jp/gfwlist
 server=/.nighost.org/127.0.0.1#5353
@@ -4243,8 +4243,8 @@ server=/.one.xthost.info/127.0.0.1#5353
 ipset=/.one.xthost.info/gfwlist
 server=/.onedrive.live.com/127.0.0.1#5353
 ipset=/.onedrive.live.com/gfwlist
-server=/.onionhacker.github.io/127.0.0.1#5353
-ipset=/.onionhacker.github.io/gfwlist
+#server=/.onionhacker.github.io/127.0.0.1#5353
+#ipset=/.onionhacker.github.io/gfwlist
 server=/.online.recoveryversion.org/127.0.0.1#5353
 ipset=/.online.recoveryversion.org/gfwlist
 server=/.onlineyoutube.com/127.0.0.1#5353
@@ -4793,8 +4793,8 @@ server=/.referer.us/127.0.0.1#5353
 ipset=/.referer.us/gfwlist
 server=/.reflectivecode.com/127.0.0.1#5353
 ipset=/.reflectivecode.com/gfwlist
-server=/.registry.google/127.0.0.1#5353
-ipset=/.registry.google/gfwlist
+#server=/.registry.google/127.0.0.1#5353
+#ipset=/.registry.google/gfwlist
 server=/.relaxbbs.com/127.0.0.1#5353
 ipset=/.relaxbbs.com/gfwlist
 server=/.releaseinternational.org/127.0.0.1#5353
@@ -6791,8 +6791,8 @@ server=/.wretch.cc/127.0.0.1#5353
 ipset=/.wretch.cc/gfwlist
 server=/.writer.zoho.com/127.0.0.1#5353
 ipset=/.writer.zoho.com/gfwlist
-server=/.wsgzao.github.io/127.0.0.1#5353
-ipset=/.wsgzao.github.io/gfwlist
+#server=/.wsgzao.github.io/127.0.0.1#5353
+#ipset=/.wsgzao.github.io/gfwlist
 server=/.wsj.com/127.0.0.1#5353
 ipset=/.wsj.com/gfwlist
 server=/.wsj.net/127.0.0.1#5353
