--- a/files/dnsmasq_list.conf
+++ b/files/dnsmasq_list.conf
@@ -2635,6 +2635,8 @@ server=/.hanunyi.com/127.0.0.1#5353
 ipset=/.hanunyi.com/gfwlist
 server=/.happy-vpn.com/127.0.0.1#5353
 ipset=/.happy-vpn.com/gfwlist
+server=/.haproxy.org/127.0.0.1#5353
+ipset=/.haproxy.org/gfwlist
 server=/.hardsextube.com/127.0.0.1#5353
 ipset=/.hardsextube.com/gfwlist
 server=/.harunyahya.com/127.0.0.1#5353
