--- a/files/custom_list.conf
+++ b/files/custom_list.conf
@@ -1,2 +1,5 @@
-#server=/.baidu.com/127.0.0.1#5353
-#ipset=/.baidu.com/gfwlist
+server=/.google.com.hk/127.0.0.1#5353
+ipset=/.google.com.hk/gfwlist
+server=/.google.com/127.0.0.1#5353
+ipset=/.google.com/gfwlist
+
