refind pdsnd config

--- a/files/pdnsd.conf
+++ b/files/pdnsd.conf
@@ -1,9 +1,9 @@
 global {
-	perm_cache=10240;
+	perm_cache=4096;
 	cache_dir="/var";
 	server_ip = 127.0.0.1;
 	server_port = 7070;
-	status_ctl = on;
+	status_ctl = off;
 	query_method = tcp_only;
 	min_ttl=1h;
 	max_ttl=1w;
